force-app/main/default/objects/Template_WhyBuyFromUS__c/Template_WhyBuyFromUS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This  custom setting Data is displayed in Visulaforce Page template</description>
    <label>Template_WhyBuyFromUS</label>
</CustomObject>