force-app/main/default/objects/Template_WhyBuyFromUS__c/fields/LogoColorStyle__c.field-meta.xml
<CustomField>
    <fullName>LogoColorStyle__c</fullName>
    <label>LogoColorStyle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>