force-app/main/default/objects/Template_WhyBuyFromUS__c/fields/LogoWidth__c.field-meta.xml
<CustomField>
    <fullName>LogoWidth__c</fullName>
    <label>LogoWidth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>