force-app/main/default/objects/Template_WhyBuyFromUS__c/fields/TemplateInfo__c.field-meta.xml
<CustomField>
    <fullName>TemplateInfo__c</fullName>
    <label>TemplateInfo</label>
    <type>TextArea</type>
</CustomField>